# messages_rust

./: .env  .gitignore  Cargo.toml  README.md
migrations/: 20240103020312_users.sql  20240105142132_messages.sql
src/: db.rs  main.rs  message.rs  password_util.rs  schema.rs  user.rs
